# DCops

./: .gitignore  .rustfmt.toml  AGENT.md  CONTRIBUTING.md  Cargo.toml  README.md  Tiltfile  justfile  kind-config.yaml  rust-toolchain.toml
.github/workflows/: base-images.yml
ADRs/: ADR-001-Scope_and_Non-Goals.md
config/crd/: all-crds.yaml  ipclaim.yaml  ippool.yaml
config/examples/: ipclaim-example.yaml  ippool-example.yaml  netbox-aggregate-example.yaml  netbox-device-example.yaml  netbox-device-role-example.yaml  netbox-device-type-example.yaml  netbox-interface-example.yaml  netbox-location-example.yaml  netbox-mac-address-example.yaml  netbox-manufacturer-example.yaml  netbox-platform-example.yaml  netbox-prefix-example.yaml  netbox-region-example.yaml  netbox-role-example.yaml  netbox-site-example.yaml  netbox-site-group-example.yaml  netbox-tag-example.yaml  netbox-tenant-example.yaml  netbox-vlan-example.yaml
config/ip-claim-controller/: deployment.yaml  kustomization.yaml  namespace.yaml  role.yaml  rolebinding.yaml  secret.yaml  serviceaccount.yaml
config/netbox/: kustomization.yaml  namespace.yaml  netbox-configmap.yaml  netbox-deployment.yaml  netbox-service.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml
config/netbox-controller/: deployment.yaml  role.yaml  rolebinding.yaml  secret.yaml  serviceaccount.yaml
controllers/ip-claim/: Cargo.toml
controllers/ip-claim/src/: controller.rs  error.rs  main.rs  reconciler.rs  watcher.rs
controllers/netbox/: Cargo.toml
controllers/netbox/src/: backoff.rs  controller.rs  error.rs  main.rs  reconcile_helpers.rs  reconcile_helpers_test.rs  test_utils.rs  watcher.rs
controllers/netbox/src/reconciler/: extras.rs  mod.rs  tenancy.rs
controllers/netbox/src/reconciler/dcim/: device.rs  device_role.rs  device_type.rs  interface.rs  location.rs  mac_address.rs  manufacturer.rs  mod.rs  platform.rs  region.rs  site.rs  site_group.rs  vlan.rs
controllers/netbox/src/reconciler/ipam/: aggregate.rs  ip_claim.rs  ip_claim_test.rs  ip_pool.rs  ip_pool_test.rs  mod.rs  prefix.rs  prefix_test.rs
controllers/pxe-intent/: Cargo.toml
controllers/pxe-intent/src/: controller.rs  error.rs  main.rs  reconciler.rs  watcher.rs
controllers/routeros/: Cargo.toml
controllers/routeros/src/: main.rs
crates/crds/: Cargo.toml
crates/crds/src/: boot_intent.rs  boot_profile.rs  ip_claim.rs  ip_pool.rs  lib.rs  references.rs
crates/crds/src/dcim/: mod.rs  netbox_device.rs  netbox_device_role.rs  netbox_device_type.rs  netbox_interface.rs  netbox_location.rs  netbox_mac_address.rs  netbox_manufacturer.rs  netbox_platform.rs  netbox_region.rs  netbox_site.rs  netbox_site_group.rs
crates/crds/src/extras/: mod.rs  netbox_tag.rs
crates/crds/src/ipam/: mod.rs  netbox_aggregate.rs  netbox_prefix.rs  netbox_role.rs  netbox_vlan.rs
crates/crds/src/tenancy/: mod.rs  netbox_tenant.rs
crates/netbox-client/: Cargo.toml
crates/netbox-client/src/: client.rs  error.rs  lib.rs  mock.rs  models.rs  trait.rs
crates/netbox-client/src/common/: mod.rs  query.rs
crates/netbox-client/src/mock/: dcim.rs  extras.rs  helpers.rs  ipam.rs  mod.rs  tenancy.rs
crates/netbox-client/tests/: integration_test.rs
crates/pxe-server/: Cargo.toml
crates/pxe-server/src/: api.rs  dhcp.rs  error.rs  http.rs  lib.rs  server.rs  tftp.rs
crates/routeros-client/: Cargo.toml
crates/routeros-client/src/: client.rs  error.rs  lib.rs  models.rs
dockerfiles/: Dockerfile.base.controller  Dockerfile.base.rust-builder  Dockerfile.ip-claim-controller  Dockerfile.ip-claim-controller.dev  Dockerfile.netbox-controller  Dockerfile.netbox-controller.dev  Dockerfile.pxe-intent-controller  Dockerfile.pxe-intent-controller.dev  Dockerfile.pxe-server  Dockerfile.routeros-controller
scripts/: apply_example_crs.py  check_deps.py  create_netbox_prefix.py  create_netbox_token_simple.py  deploy_netbox.py  dev_down.py  dev_up.py  generate_crds.py  get_netbox_token_from_db.py  manage_netbox_token.py  netbox_status.py  setup_kind.py  status.py  undeploy.py  undeploy_netbox.py  verify_netbox_crs.py  verify_netbox_crs_quick.sh  verify_netbox_prefix_simple.py
