[workspace]
members = [
    "controllers/pxe-intent",
    "controllers/ip-claim",
    "controllers/routeros",
    "crates/netbox-client",
    "crates/routeros-client",
    "crates/pxe-server",
    "crates/crds",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Microscaler <infra@microscaler.io>"]
license = "Apache-2.0"
repository = "https://github.com/microscaler/DCops"
homepage = "https://github.com/microscaler/DCops"
documentation = "https://docs.rs"
keywords = ["kubernetes", "controller", "bare-metal", "pxe", "ipam"]
categories = ["network-programming", "web-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Kubernetes
# kube 2.0 is a major version upgrade - check compatibility
kube = { version = "2.0.0", features = ["runtime", "derive", "client", "rustls-tls"], default-features = false }
kube-runtime = "2.0"
# k8s-openapi version must match kube's requirement
# kube 2.0 requires k8s-openapi 0.26+
# Features enabled per-binary crate only
k8s-openapi = { version = "0.26", default-features = false }
# Configure rustls crypto provider (use ring for compatibility)
rustls = { version = "0.23", features = ["ring"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP client
# Force rustls to avoid OpenSSL dependency
# rustls-tls-webpki-roots avoids system cert issues
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

# Logging and observability
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
tracing-opentelemetry = "0.25"

# HTTP server (for metrics/probes endpoints)
axum = "0.8"

# Prometheus metrics
prometheus = "0.14"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
literal_string_with_formatting_args = "allow"

